--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "type": "module",
   "dependencies": {
-    "firebase": "^8.8.1"
+    "firebase": "^8.8.1",
+    "firebase-admin": "^9.11.0"
   }
 }
