--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "prettier": "~2.2.1",
     "prettier-plugin-svelte": "^2.2.0",
     "svelte": "^3.34.0",
+    "svelte-adapter-firebase": "^0.10.5",
     "svelte-preprocess": "^4.7.4"
   },
   "type": "module",
